--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.523.0",
     "next": "14.2.30",
+    "next-intl": "^4.3.4",
     "next-sanity": "^9.12.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
